--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,7 +48,10 @@
                         <li class="nav-item">
                           <a class="nav-link" href="/expenses/showAllExpenses">Expenses</a>
                         </li>
-                        
+                        <li class="nav-item">
+                          <a class="nav-link" href="/income/showAllIncome">Incomes</a>
+                        </li>
+                         
                       </ul>
             
 
