Updates for income

--- a/views/transactions/all_income.handlebars
+++ b/views/transactions/all_income.handlebars
@@ -41,6 +41,7 @@
                                             
                                             <p id="expense-desc" class="list-group-item-heading">{{desc}}</p>
                                             <p class="list-group-item-text"> {{ bank_account.ac_name }} | {{date}}</p>
+                                            <p id="bankaccno" hidden>{{bank_account.ac_number}}</p>
                                         </div>
                                         <span id="amount" class="label label-default label-pill pull-xs-right"><b>${{amount}}</b></span>
                                         
