--- a/public/css/all_expenses.css
+++ b/public/css/all_expenses.css
@@ -49,3 +49,7 @@ td{
 #navbar-navbar-expand-lg-sticky-top-navbar-dark-bg-dark{
    visibility: visible;
 } */
+
+#signout{
+    visibility: hidden
+}
