--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,7 +60,7 @@
                         <i class="material-icons md-light md-36">person</i>
                       </span> -->
 
-                      <div class="btn-group pull-xs-right">
+                      <div id = "signout" class="btn-group pull-xs-right">
                        <a class="sign-out" href="/signout">SIGN OUT</a>
                            
                           </div>
