--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -123,7 +123,7 @@
 
              <div class="card">
                     <div id="my-title-container2" class="card-header">
-                            <h5 class="my-card-header-title">{{current_month}}</h5>
+                            <h5 class="my-card-header-title">MONTHLY SUMMARY</h5>
                     </div>
                     <div class="card-body">
                         <div id="chart_div"/>
