showAllAccounts front end error resolved

--- a/views/bankac/all_accounts.handlebars
+++ b/views/bankac/all_accounts.handlebars
@@ -76,7 +76,7 @@
                         </div>
                     </div>
 
-                    <script>
+                    {{!-- <script>
                         var modal = document.getElementById("myModal");
                         var btn = document.getElementById("primary-buttonD");
                         var span = document.getElementsByClassName("close")[0];
@@ -95,7 +95,7 @@
                                 modal.style.display = "none";
                             }
                         }
-                    </script>
+                    </script> --}}
                 </form>
 
             </div>
