--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -190,7 +190,7 @@
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/css/bootstrap-material-design.min.css" integrity="sha384-R80DC0KVBO4GSTw+wZ5x2zn2pu4POSErBkf8/fSFhPXHxvHJydT0CSgAP2Yo2r4I" crossorigin="anonymous">
                 
         
-        <script>$(document).ready(function() { $('body').bootstrapMaterialDesign()});</script>
+        {{!-- <script>$(document).ready(function() { $('body').bootstrapMaterialDesign()});</script> --}}
         <script src="/public/js/add_category.js"></script>
 
 
