1. Edit expense done 2. Delete expense done 3. Removed some useless code 4. No expense/income view

--- a/public/css/all_expenses.css
+++ b/public/css/all_expenses.css
@@ -45,6 +45,11 @@ td{
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
+#add_expense{
+    background: #E53935;
+    text-align: center;
+}
+
 /* 
 #navbar-navbar-expand-lg-sticky-top-navbar-dark-bg-dark{
    visibility: visible;
