--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -194,7 +194,7 @@
         <script src="/public/js/add_category.js"></script>
 
 
-        <script>
+        {{!-- <script>
                 // Example starter JavaScript for disabling form submissions if there are invalid fields
                 (function() {
                 "use strict";
@@ -209,7 +209,7 @@
                 }, false);
                 }, false);
                 }());
-        </script>
+        </script> --}}
        
     </body>
 
