--- a/views/transactions/add_transfer.handlebars
+++ b/views/transactions/add_transfer.handlebars
@@ -124,8 +124,8 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         
 
-        <script>$(document).ready(function() { $('body').bootstrapMaterialDesign()});</script>
-    
+        {{!-- <script>$(document).ready(function() { $('body').bootstrapMaterialDesign()});</script>
+     --}}
         <script src="/public/js/add_transfer.js"></script>
        
     </body>
