--- a/public/css/all_income.css
+++ b/public/css/all_income.css
@@ -42,6 +42,14 @@ td{
     
  }
 
+ #add_income{
+    background: #4CAF50;
+    text-align: center
+    
+
+
+}
+
  .delete_income_button{
     height:30px;
     width:30px;
