--- a/views/transactions/add_income.handlebars
+++ b/views/transactions/add_income.handlebars
@@ -205,10 +205,10 @@
         <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/js/bootstrap-material-design.js" integrity="sha384-3xciOSDAlaXneEmyOo0ME/2grfpqzhhTcM4cE32Ce9+8DW/04AGoTACzQpphYGYe" crossorigin="anonymous"></script>
          <script src="/public/js/add_category.js"></script>
-        <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
-        
+        {{!-- <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
+         --}}
 
-        <script>
+        {{!-- <script>
                 // Example starter JavaScript for disabling form submissions if there are invalid fields
                 (function() {
                 "use strict";
@@ -223,7 +223,7 @@
                 }, false);
                 }, false);
                 }());
-        </script>
+        </script> --}}
        
     </body>
 
