--- a/views/transactions/view_expense.handlebars
+++ b/views/transactions/view_expense.handlebars
@@ -77,16 +77,11 @@
                                     </button>
                                 </a>
                                 
-                                <form action="/expenses/delete/{{expense._id}}" method="DELETE">
-                                    <button id="edit" type="submit" class="btn btn-danger btn-raised">
-                                        DELETE
-                                    </button>
-                                </form>
-                                {{!-- <a href="/expenses/delete/{{expense._id}}">
+                                <a href="/expenses/delete/{{expense._id}}">
                                     <button id="edit" type="button" class="btn btn-danger btn-raised">
                                         DELETE
                                     </button>
-                                </a> --}}
+                                </a>
                                 
                             </div>                
                         </div>
