--- a/views/transactions/add_income.handlebars
+++ b/views/transactions/add_income.handlebars
@@ -83,7 +83,7 @@
                                 {{/if}}
                                 <div id="field-container" class="input-group">
                                         <span class="input-group-addon"><i id = "field-icon" class="material-icons">monetization_on</i></span>
-                                        <input type="text" name="amount" class="form-control" placeholder="Enter amount"/>
+                                        <input type="number" step=0.01 name="amount" class="form-control" placeholder="Enter amount"/>
                                         {{!-- <div class="invalid-feedback">
                                                 Please provide a valid amount
                                         </div> --}}
