--- a/views/transactions/add_income.handlebars
+++ b/views/transactions/add_income.handlebars
@@ -7,10 +7,10 @@
        
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
-    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
-    
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
+        <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
+        
 
 
 
@@ -63,16 +63,7 @@
                              
 
                           <form action="/income/saveNewIncome"  id="needs-validation" method="POST" novalidate> 
-                                <!-- <div class="form-group">
-                                        <span class="input-group-addon">$</span>
-                                        <input type="text" class="form-control" id="expense-amount" placeholder="Enter Amount">
-                                </div> -->
-
-                                   {{!-- {{#if error}}
-                                        <div class="alert alert-danger">
-                                                <b>{{error}}</b> 
-                                        </div>
-                                {{/if}} --}}
+                                
 
                                 {{#if errors}}
                                         
@@ -84,17 +75,12 @@
                                 <div id="field-container" class="input-group">
                                         <span class="input-group-addon"><i id = "field-icon" class="material-icons">monetization_on</i></span>
                                         <input type="number" step=0.01 name="amount" class="form-control" placeholder="Enter amount"/>
-                                        {{!-- <div class="invalid-feedback">
-                                                Please provide a valid amount
-                                        </div> --}}
+                                        
                                 </div>
 
                                 <div id="field-container" class="input-group">
                                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                                        <input type="text" name="description" class="form-control" placeholder="Description"/>
-                                       {{!-- <div class="invalid-feedback">
-                                                Please provide a valid Description
-                                        </div> --}}
                                 </div>
 
                                  {{!-- <div id="field-container" class="input-group">
@@ -108,18 +94,6 @@
                                     
                                         <input id="selected_bank_account" name = "selected_bank_account" type="text" class="form-control" hidden="true">
 
-                                        {{!-- <div class="btn-group">
-                                                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  Choose Your bank account
-                                                </button>
-                                                <div class="dropdown-menu">
-                                                  <a class="dropdown-item" href="#">Chase</a>
-                                                  <a class="dropdown-item" href="#">Cash</a>
-                                                  <a class="dropdown-item" href="#">Forex card</a>
-                                                  <div class="dropdown-divider"></div>
-                                                  <a class="dropdown-item" href="#">Add New Account</a>
-                                                </div>
-                                        </div> --}}
         
                                          <div class="btn-group">
                                                 <button id="btn-bank-account" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -136,14 +110,9 @@
                                       
                                 </div>
 
-       
-                           
-
                                  <div class="date">
                                         <label id = "label"for="dt" <i class="material-icons">date_range</i></label>
 	                                <input name="dt" type="date" class="form-control"/>
-                                
-
                                 </div>
                                   
                         
@@ -153,7 +122,7 @@
                                 </div>
                                 {{/if}} --}}
                                 
-                                <button id="primary-button"  type="submit" class="btn btn-primary btn-lg btn-raised">Save</button>
+                                <button id="primary-button"  type="submit" class="btn btn-primary btn-raised">Save</button>
                                 
                             </form>
 <div>
@@ -172,58 +141,12 @@
                 </div><!--End of card-->
         </div><!--End of Add Expense Form-->
 
-
-        <!-- Modal -->
-        <div id="myModal" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                        <div class="modal-content">
-                                <div class="card">
-                                        <div id="my-title-container" class="card-header">
-                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                <h5 class="my-card-header-title">Add New Category</h5>
-                                        </div>
-                                                
-                                        
-                                        <div class="card-body">
-                                                <form action = "/addExpense" method = "post">
-                                                <div id="field-container" class="input-group">
-                                                                <span class="input-group-addon"><i class="material-icons">loyalty</i></span>
-                                                                <input type="text" name="amount" class="form-control" placeholder="Enter Your Category"/>
-                                                        </div>
-
-                                                        <button id="primary-button"  type="submit" class="btn btn-primary btn-lg btn-raised">Save</button>  
-                                                </form>
-                                        </div>
-                                </div>
-                        </div>
-                        
-
-                </div>
-        </div> <!--End of Modal-->
         
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/js/bootstrap-material-design.js" integrity="sha384-3xciOSDAlaXneEmyOo0ME/2grfpqzhhTcM4cE32Ce9+8DW/04AGoTACzQpphYGYe" crossorigin="anonymous"></script>
          <script src="/public/js/add_category.js"></script>
-        {{!-- <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
-         --}}
-
-        {{!-- <script>
-                // Example starter JavaScript for disabling form submissions if there are invalid fields
-                (function() {
-                "use strict";
-                window.addEventListener("load", function() {
-                var form = document.getElementById("needs-validation");
-                form.addEventListener("submit", function(event) {
-                if (form.checkValidity() == false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                }
-                form.classList.add("was-validated");
-                }, false);
-                }, false);
-                }());
-        </script> --}}
+        
        
     </body>
 
