1. Removed unused files 2. Commented script lines since they are already mentioned in main.handlebars

--- a/views/transactions/add_income.handlebars
+++ b/views/transactions/add_income.handlebars
@@ -5,35 +5,24 @@
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="/public/css/add_income.css">
        
-        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+        {{!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
         <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
-        
-
-
-
         
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
         
-
-
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/css/bootstrap-material-design.min.css" integrity="sha384-R80DC0KVBO4GSTw+wZ5x2zn2pu4POSErBkf8/fSFhPXHxvHJydT0CSgAP2Yo2r4I" crossorigin="anonymous">
 
-        <!--
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
-        -->
-
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> 
-        
+         --}}
         <title>Add New Income</title>
     </head>
 
@@ -49,17 +38,6 @@
                                 
                                 
                         <div class="card-body">
-                            <!--
-                          <h4 class="card-title">Special title treatment</h4>
-                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            -->
-                        {{!-- {{#if errors}}
-                                {{#each errors}}
-                                        <div class = "alert alert-danger">
-                                        <strong>{{msg}}</strong>
-                                        </div>
-                                {{/each}}
-                          {{/if}} --}}
                              
 
                           <form action="/income/saveNewIncome"  id="needs-validation" method="POST" novalidate> 
@@ -74,7 +52,7 @@
                                 {{/if}}
                                 <div id="field-container" class="input-group">
                                         <span class="input-group-addon"><i id = "field-icon" class="material-icons">monetization_on</i></span>
-                                        <input type="number" step=0.01 name="amount" class="form-control" placeholder="Enter amount"/>
+                                        <input type="number" step="0.01" name="amount" class="form-control" placeholder="Enter amount"/>
                                         
                                 </div>
 
@@ -125,9 +103,9 @@
                                 <button id="primary-button"  type="submit" class="btn btn-primary btn-raised">Save</button>
                                 
                             </form>
-<div>
+                        <div>
     
-</div>
+                </div>
 
 
 
@@ -142,10 +120,11 @@
         </div><!--End of Add Expense Form-->
 
         
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        {{!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/js/bootstrap-material-design.js" integrity="sha384-3xciOSDAlaXneEmyOo0ME/2grfpqzhhTcM4cE32Ce9+8DW/04AGoTACzQpphYGYe" crossorigin="anonymous"></script>
-         <script src="/public/js/add_category.js"></script>
+          --}}
+        <script src="/public/js/add_category.js"></script>
         
        
     </body>
